tests/fixtures/invalid/dict_rshift_float.py
# Cannot right shift Dict[str, int] and Float
x: float = {"a": 1} >> 1.0
